This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

07-Dec-2004 (Lars Duening)  (3.3.627)
  - (pkg-tls.c) Added allocation wrapper so that gnutls allocations can 
       be traced using the driver's mechanisms (thanks, Peng!)
  - (xalloc.c) Modified rexalloc() and xfree() to accept NULL pointers
       as well (as the C standard demands) (Bug #0000132).

06-Dec-2004 (Lars Duening)  (3.3.626)
  - (erq/erq.c) The erq didn't quite use correct data lengths when sending UDP
       packets, either (thanks, Tobias!)

03-Dec-2004 (Lars Duening)  (3.3.624, .625)
  - (erq/erq.c) The erq errorneously assumed a constant data length
       when receiving UDP packets (thanks, Tobias!)
  - (comm.c, object.c) The driver didn't check if the privilege_violation()
       called for input_to() or rename_object() destructed the object
       in question (Bug #0000316).

30-Nov-2004 (Lars Duening)  (3.3.623)
  - (comm.c) Fixed a memory leak when a no-bank input_to was denied (Bug
       #0000143)

29-Nov-2004 (Lars Duening)  (3.3.622)
  - (interpret.c) When indexing a string for assignment, the driver failed
       to duplicate the string, leading to interesting effects if the string
       was used as mapping key (reported by Andre).

27-Nov-2004 (Lars Duening)  (3.3.621)
  - (interpret.c) When calling inherited functions in objects with virtual
       parents, the function adjusting the offsets always returned NULL
       instead of the pointer to the parent. This was a fallout from the
       closure change.

26-Nov-2004 (Lars Duening)  (3.3.620)
  - (Makefile.in, doc/man/ldmud.1) Added the automatic generation of a manpage
       from the drivers '--longhelp' output.
  - (src/bugs, src/done, src/wk) Moved the data from these directories
       into the bugtracker.

26-Nov-2004 (Lars Duening)  (3.3.618, .619)
  - (closure.c) Calls to explicitely inherited lfun closures weren't compiled