@@ -53,18 +53,16 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 627)
-(Parent-Version lpmud 3-3 626)
+(Project-Version lpmud 3-3 628)
+(Parent-Version lpmud 3-3 627)
 (Version-Log "
-  - (pkg-tls.c) Added allocation wrapper so that gnutls allocations can 
-       be traced using the driver's mechanisms (thanks, Peng!)
-  - (xalloc.c) Modified rexalloc() and xfree() to accept NULL pointers
-       as well (as the C standard demands) (Bug #0000132).
+  - (xalloc.c) Modified xalloc() to accept allocations of size 0 (again as the
+       C standard demands).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Tue, 07 Dec 2004 22:18:20 -0700")
+(Checkin-Time "Fri, 10 Dec 2004 09:02:23 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -102,7 +100,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.83 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.690 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.691 644))
   (HISTORY (lpmud/f/49_HISTORY 1.384 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -356,7 +354,7 @@
   (src/wiz_list.h (lpmud/1_wiz_list.h 1.5.1.7.1.3 644))
   (src/wiz_list.c (lpmud/2_wiz_list.c 1.13.1.14.1.5 644))
   (src/xalloc.h (lpmud/g/51_xalloc.h 1.24 644))
-  (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.42 644))
+  (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.43 644))
   (src/xptmalloc.c (lpmud/d/b/10_xptmalloc. 1.5 644))
 
   ;; Build files
